--- a/templates/books/books_list.html
+++ b/templates/books/books_list.html
@@ -1,9 +1,18 @@
+{% include '../header.html' %}
 <h1>Список книг</h1>
 {% for i in book %}
-<br>
-    <img src="{{ i.image.url }}" width="280" height="350">
-    <h2>Название - {{ i.name }}</h2>
-    <p>Жанр - {{ i.genre }}</p>
-    <a href="/books/{{ i.id }}/">О книге</a>
+<div class="card" style="width: 18rem;">
+  <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">{{ i.name }}</h5>
+    <p class="card-text">{{ i.genre }}</p>
+    <a href="/books/{{ i.id }}/" class="btn btn-primary">О книге</a>
+  </div>
+</div>
 <br>
 {% endfor %}
+
+
+
+
+{% include '../footer.html' %}
