--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Главная</a>
+          <a class="nav-link active" aria-current="page" href="#">Главная страница</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Рекомендуемые</a>
