--- a/templates/books/books_list.html
+++ b/templates/books/books_list.html
@@ -10,7 +10,7 @@
         {% for i in book %}
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="{{ i.image.url }}" class="card-img-top" alt="{{ i.name }}">
+                <img src="{{ i.image.url }}" class="card-img-top" alt="{{ i.name }}" width="280" height="500">
                 <div class="card-body">
                     <h5 class="card-title">{{ i.name }}</h5>
                     <p class="card-text">{{ i.genre }}</p>
