--- a/templates/users/registration.html
+++ b/templates/users/registration.html
@@ -1,6 +1,10 @@
+{% load static %}
+
 <h1>Регистрация</h1>
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Регистрация</button>
 </form>
+
+{% include '../footer.html' %}
