--- a/templates/users/user_list.html
+++ b/templates/users/user_list.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html>
 <head>
     <title>Профиль пользователя</title>
@@ -21,7 +22,10 @@
         {% endfor %}
     </ul>
     <form action="{% url 'users:logout' %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
         <button type="submit">Logout</button>
     </form>
 </body>
 </html>
+
+{% include '../footer.html' %}
